[package]
name = "ltwc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1"
env_logger = { git = "https://github.com/env-logger-rs/env_logger.git", package = "env_logger"  }
log = "0.4"
serde_json = "1"
rsa = "0.6"
rand = "0.8"

ltwr = { path = "../ltwr" }