[package]
name = "ltwr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
rsa = "0.6"
rand = "0.8"
num-bigint-dig = "^0.8"